--- a/Exercício1/exercicio1.html
+++ b/Exercício1/exercicio1.html
@@ -38,8 +38,8 @@
 <body style="background-color: pink; font-family: Verdana, Geneva, Tahoma, sans-serif;">
 
     <div>
-        <h1 style="background-color: pink; color:white; text-align: center;">Barbie</h1>
-        <p style="color: white; text-align: center;">
+        <h1 style="background-color: pink; color:purple; text-align: center;">Barbie</h1>
+        <p style="color:purple; text-align: center;">
             Um site sobre a boneca mais falada do mundo!</p>
     </div>
     
